--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "@the-arc-gmbh/eslint-base-config",
-  "version": "0.0.1",
+  "name": "@the-arc-gmbh/eslint-config",
+  "version": "0.1.0-beta.0",
   "author": "Nico Hülscher <nico.huelscher@thearc.de>",
   "description": "Default THE ARC configuration for ESLint projects.",
-  "scripts": {
-    "test": "node ./index.js",
-    "prepublish": "npm test"
-  },
   "files": [
     "LICENSE",
     "README.md",
     "index.js",
-    "default.yml"
+    "next.js",
+    "svelte.js",
+    "node_modules"
   ],
-  "homepage": "https://www.thearc.de/",
+  "homepage": "https://thearc.de/",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1",
+    "@next/eslint-plugin-next": "13.2.1",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
+    "eslint-config-next": "13.2.1",
     "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-import": "2.27.4",
-    "eslint-plugin-jsdoc": "39.6.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsdoc": "40.0.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
-    "prettier": "2.8.3",
+    "eslint-plugin-svelte3": "4.0.0",
+    "prettier": "2.8.4",
     "prettier-eslint": "15.0.1"
   },
   "keywords": [
@@ -36,7 +39,8 @@
     "node": "^10.12.0 || >=12.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.30.0"
+    "eslint": "8.34.0",
+    "typescript": "4.9.5"
   },
   "repository": {
     "type": "git",
